<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Hello World!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainPage">

        <TextView
            android:id="@+id/pizza_size"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:letterSpacing="0.5"
            android:text="@string/pizza_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_pizza_size"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/pizza_whole" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/small" />

                    <RadioButton
                        android:id="@+id/medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />

                    <RadioButton
                        android:id="@+id/large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/large" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/toppings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:letterSpacing="0.5"
            android:text="@string/toppings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_mushroom"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:srcCompat="@drawable/mushroom" />

            <CheckBox
                android:id="@+id/mushroom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mushroom" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_pepperoni"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:srcCompat="@drawable/pepperoni" />

            <CheckBox
                android:id="@+id/pepperoni"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pepperoni" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_cheese"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:srcCompat="@drawable/cheese" />

            <CheckBox
                android:id="@+id/cheese"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cheese" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_chicken"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:srcCompat="@drawable/chicken" />

            <CheckBox
                android:id="@+id/chicken"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/chicken" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_green_olive"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:srcCompat="@drawable/green_olive" />

            <CheckBox
                android:id="@+id/green_olive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/green_olive" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_green_pepper"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:srcCompat="@drawable/green_pepper" />

            <CheckBox
                android:id="@+id/green_pepper"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/green_pepper" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="10dp"
                android:text="@string/subtotal" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal_price"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text="@string/next"
            tools:layout_margin="20dp" />
    </LinearLayout>
</ScrollView>